[project]
name = "library-mcp-server"
version = "0.1.0"
description = "A powerful Model Context Protocol (MCP) server for managing personal book libraries with advanced features like search, recommendations, and analytics."
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
  "anyio>=4.10.0",
  "click>=8.2.1",
  "httpx>=0.28.1",
  "mcp>=1.13.0",
  "pydantic>=2.11.7",
  "starlette>=0.47.2",
  "uvicorn>=0.35.0",
]

[project.urls]
Repository = "https://github.com/trngthnh369/library-mcp-server.git"
Source = "https://github.com/trngthnh369/library-mcp-server.git"


[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests*", "docs*"]
